plugins {
	id 'java'
    id 'jacoco'
	id 'org.sonarqube' version "${sonarVersion}"
	id 'org.springframework.boot' version "${springVersion}"
	id 'io.spring.dependency-management' version '1.1.6'
}

bootJar{
    mainClass = 'co.com.ancas.Main'
}

sonar {
	properties {
		property "sonar.projectKey", "ancas19_library"
		property "sonar.organization", "ancas19"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.modules", "infrastructure/entrypoints/*," +
				"infrastructure/driven-adapters/postgres/*, infrastructure/driven-adapters/email/* ,infrastructure/driven-adapters/images/*,"+
				"infrastructure/driven-adapters/redis/*, applications/use-cases/*, domain/models/*, infrastructure/entrypoints/*"
		property "sonar.projectVersion", "Last"
		property "sonar.languages", "java"
		property "sonar.sources", "src/main/java"
		property "sonar.test", "src/test/java"
		property "sonar.java.binaries", ""
		property "sonar.junit.reportsPath", ""
		property "sonar.java.coveragePlugin", "jacoco"
		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacocoMergedReport/jacocoMergedReport.xml"
		property "sonar.exclusions","**/Main.java"
		property "sonar.java.source", "21"
		property "sonar.sourceEncoding", "UTF-8"
		property "sonar.exclusions", "**/model/**, **/entity/** **/config/**, **/util/**, **/*Application.java, **/test/**, " +
				"modular-test/**,  deployment/**, **/data/**, **/configuration/**, **/repository/**,**/json_schema/**, **/impl/** , **/request/**, **/response/**"+
				"**/*RequestMocks.java, **/TestMock.java, **/entities/**"


	}
}

allprojects {
	repositories {
		mavenLocal()
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'jacoco'
    apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	group = 'co.com.ancas'
	version = '0.0.1-SNAPSHOT'

	compileJava{
		sourceCompatibility = '21'
		targetCompatibility = '21'
	}
	repositories {
		mavenLocal()
		mavenCentral()
	}

	dependencies {
		implementation "org.springframework.boot:spring-boot-starter-security:${springVersion}"
		implementation "org.springframework.boot:spring-boot-starter-web:${springVersion}"
		compileOnly "org.projectlombok:lombok:${lombokVersion}"
		annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
		testImplementation "org.springframework.boot:spring-boot-starter-test:${springVersion}"
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.1.2.RELEASE'
		implementation "org.springframework.boot:spring-boot-starter-mail:${springVersion}"
		implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${springVersion}"
		implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}"

		implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
		runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
		runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'

		implementation group: 'io.lettuce', name: 'lettuce-core', version: '6.3.2.RELEASE'
		implementation "org.springframework.boot:spring-boot-starter-data-redis:${springVersion}"
		implementation group: 'redis.clients', name: 'jedis', version: '5.2.0'

	}

	test.finalizedBy(project.tasks.jacocoTestReport)

	jacocoTestReport {
		reports {
			xml.required = true
			html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
		}
	}

	sourceSets {
		main{
			java {
				srcDirs = ['src/main/java']
			}
			resources {
				srcDirs = ['src/main/resources']
			}
		}
		test {
			java {
				srcDirs = ['src/test/java']
			}
			resources {
				srcDirs = ['src/test/resources']
			}
		}
	}

	test{
		useJUnitPlatform()
	}

}

jacoco {
	toolVersion = jacocoVersion
	reportsDirectory = layout.buildDirectory.dir("reports/jacoco").get().asFile
}
task jacocoMergedReport(type: JacocoReport) {
	dependsOn = subprojects.jacocoTestReport
	additionalSourceDirs.setFrom files(subprojects.sourceSets.main.allSource.srcDirs)
	sourceDirectories.setFrom files(subprojects.sourceSets.main.allSource.srcDirs)
	classDirectories.setFrom files(subprojects.sourceSets.main.output)
	executionData.setFrom project.fileTree(dir: '.', include: '**/build/jacoco/test.exec')
}

tasks.withType(JavaCompile) {
	options.compilerArgs = [
			'-Amapstruct.suppressGeneratorTimestamp=true'
	]
}